# pyziptar

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
pyziptar/: main.py
tests/: conftest.py  test_authors.py  test_pyziptar.py
